app/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .orient {
        writing-mode: vertical-rl;
        text-orientation: mixed;
    }
}

@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Archia';
    font-style: normal;
    font-weight: 400;
    src: url('~/assets/fonts/archia-regular.woff2') format('woff2'),/*    !* Chrome 36+, Opera 23+, Firefox 39+ *!*/
    url('~/assets/fonts/archia-regular.woff') format('woff'); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}

.plyr {
    width: auto;
    height: 100%;
}

